--- a/src/components/section/skills/skills.module.css
+++ b/src/components/section/skills/skills.module.css
@@ -27,7 +27,7 @@
 @media screen and (max-width:786px) {
     .skillsSection{
         flex-direction: column;
-        gap: 2rem;
+        gap: 4rem;
     }
 
     .main{
@@ -39,13 +39,12 @@
 
     .skillsSection{
         flex-direction: column;
-        gap: 2rem;
     }
 
 }
 
 @media screen and (min-width:786px) and (max-width:1200px){
     .skillsSection{
-        gap: 3rem;
+        gap: 4rem;
     }
 }
